fix: adjust footer gap and add flex-wrap to client section

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,12 +1,13 @@
 @use '@/styles/variables' as *;
 
 .footer {
+  margin-top: 3rem;
+
   .wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 80px;
-    margin-top: 2rem;
+    gap: 50px;
     padding: 2rem;
   }
 
